// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should edit members 1`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit"
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;

exports[`should edit members 2`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit"
  >
    <BulletListIcon />
  </ButtonIcon>
  <EditMembersModal
    group={
      {
        "id": 3,
        "membersCount": 5,
        "name": "Foo",
      }
    }
    onClose={[Function]}
  />
</Fragment>
`;

exports[`should edit members 3`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit"
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;
